dfir_rs/tests/compile-fail/stable/surface_defer_loop_outside_loop.stderr
error: Operator `defer_loop(...)` must be within a `loop { ... }` context.
 --> tests/compile-fail/stable/surface_defer_loop_outside_loop.rs:3:31
  |
3 |         source_iter(0..10) -> defer_loop() -> null();
  |                               ^^^^^^^^^^
